syntax = "proto3";

package app;

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
  string message = 1;
}

message SendNotificationResponse {
  string message = 1;
}